<resources>
    <string name="app_name">Laddr</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_signup">Sign Up!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_to_login">Already Registered?</string>
    <string name="saved_email"/>
    <string name="saved_password" />
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_next">Next</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="btn_return_bank">Go Back?</string>
    <string name="btn_apply">Apply Now!</string>
    <string-array name="ddl_academic">
        <item>High School</item>
        <item>College</item>
        <item>University</item>
        <item>Graduated</item>
        <item>Not Applicable</item>
    </string-array>
</resources>
