<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tv_loginLogo"
            android:text="Laddr"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textColor="#A57278"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_firstname"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_lastname"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="Academic Status:"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spr_academicstatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:entries="@array/ddl_academic"
                        android:paddingStart="15dp"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>
        s
        <Button
            android:id="@+id/btn_signup_add_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#A57278"
            android:text="@string/btn_signup"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <!-- BTN to Login Screen -->

        <Button
            android:id="@+id/btn_return"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_return_bank"
            android:textAllCaps="false"
            android:textColor="#A57278" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:visibility="invisible" />

    </LinearLayout>

</FrameLayout>
